--- a/components/alt-screen-header.css
+++ b/components/alt-screen-header.css
@@ -3,8 +3,9 @@
   margin-bottom: 15px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 }
+
 .alt-header__column {
   width: 33%;
 }
